--- a/webapp/src/main/resources/org/isisaddons/wicket/wickedcharts/webapp/welcome.html
+++ b/webapp/src/main/resources/org/isisaddons/wicket/wickedcharts/webapp/welcome.html
@@ -19,9 +19,15 @@ language governing permissions and limitations under the License.
     domain-driven apps in Java.
     <br/>
     <br/>
-    This example app demonstrates the Isis Addons' <a href="https://github.com/isisaddons/isis-wicket-summernote" target="_blank">Summernote Editor (Wicket) component</a>,
+    The Creation Tool Prototype demonstrates how a maritime ontology and taxonomy is used to make consistent machine-readable regulations to support compliance and enforcement.
+    <br/>
+    <br/>
+    This prototype is based on the Isis Addons' <a href="https://github.com/isisaddons/isis-wicket-summernote" target="_blank">Summernote Editor (Wicket) component</a>,
     configured for a very simple and purposefully minimal application.
     <br/>
     <br/>
-    For more details, see the <a href="https://github.com/isisaddons/isis-wicket-summernote" target="_blank">github repo</a>.
+    For more details on Summernote, see the <a href="https://github.com/isisaddons/isis-wicket-summernote" target="_blank">github repo</a>.
+    <br/>
+    <br/>
+    For more details on the CreationTool GUI, see the <a href="https://github.com/mariannehagaseth/CreationToolEcompliance" target="_blank">github repo</a>.
 </p>
