--- a/webapp/src/main/webapp/about/index.html
+++ b/webapp/src/main/webapp/about/index.html
@@ -55,36 +55,25 @@ language governing permissions and limitations under the License.
 
     <p>
         <a href="http://isis.apache.org" target="_blank">Apache Isis</a>&trade; is a framework to let you rapidly develop
-        domain-driven apps in Java.  This example app demonstrates the Isis Addons' <a href="https://github.com/isisaddons/isis-wicket-wickedcharts" target="_blank">Summernote Editor (Wicket) Component</a>,
+        domain-driven apps in Java.  This prototype is based on the Isis Addons' <a href="https://github.com/isisaddons/isis-wicket-wickedcharts" target="_blank">Summernote Editor (Wicket) Component</a>,
         configured for a very simple and purposefully minimal application.  The application demonstrates how Isis' Wicket viewer can be configured to use WYSIWYG
         rich editor.
    <p>To access the app:</p>
     <ul>
         <li>
             <p>
-                <b><a href="wicket/">wicket/</a></b>
+                <b><a href="wicket/">CreationTool/</a></b>
             </p>
             <p>
-                provides accesses to a generic UI for end-users and administrators.
-            </p>
-        </li>
-        <li>
-            <p>
-                <b>
-                    <a href="restful/">restful/</a>
-                </b>
-            </p>
-            <p>
-                provides access to a RESTful API conformant with the
-                <a href="http://restfulobjects.org">Restful Objects</a> spec.
+                provides accesses to the Creation Tool prototype from the <a href="http://www.e-compliance-project.eu/" target="_blank">e-Compliance project.</a>
             </p>
         </li>
     </ul>
 
     <p>
-        The default user/password is <b><i>sven/pass</i></b>.
+        The default user/password is <b><i>ecompliance/pass</i></b>.
     </p>
-
+    <img alt="eCompliance" src="about/images/eComplianceLogo.png" />
 </div>
 </body>
 </html>
